fix icon alignment inside menu-items

--- a/packages/aura/src/components/item-overlay.css
+++ b/packages/aura/src/components/item-overlay.css
@@ -21,6 +21,10 @@
     --vaadin-icon-visual-size: 75%;
   }
 
+  &::part(content) {
+    display: flex;
+  }
+
   @media (any-hover: hover) {
     &:not([disabled], [aria-disabled='true']):hover {
       background: color-mix(in srgb, var(--aura-accent-color) 10%, transparent);
